# src/main/resources/openapi/documentation.yaml
@@ -34,9 +34,9 @@ paths:
       description: ""
       requestBody:
         content:
-          '*/*':
+          application/json:
             schema:
-              $ref: "#/components/schemas/Product"
+              $ref: "#/components/schemas/ProductUpdateDto"
         required: true
       responses:
         "400":
@@ -70,9 +70,9 @@ paths:
       description: ""
       requestBody:
         content:
-          '*/*':
+          application/json:
             schema:
-              $ref: "#/components/schemas/Product"
+              $ref: "#/components/schemas/ProductDto"
         required: true
       responses:
         "400":
@@ -227,3 +227,57 @@ components:
         - "cost"
         - "createdAt"
         - "category"
+    ProductUpdateDto:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          format: "int32"
+        sku:
+          type: "string"
+        name:
+          type: "string"
+        description:
+          type: "string"
+        price:
+          type: "integer"
+          format: "int32"
+        cost:
+          type: "integer"
+          format: "int32"
+        categoryId:
+          type: "integer"
+          format: "int32"
+      required:
+        - "id"
+        - "sku"
+        - "name"
+        - "description"
+        - "price"
+        - "cost"
+        - "categoryId"
+    ProductDto:
+      type: "object"
+      properties:
+        sku:
+          type: "string"
+        name:
+          type: "string"
+        description:
+          type: "string"
+        price:
+          type: "integer"
+          format: "int32"
+        cost:
+          type: "integer"
+          format: "int32"
+        categoryId:
+          type: "integer"
+          format: "int32"
+      required:
+        - "sku"
+        - "name"
+        - "description"
+        - "price"
+        - "cost"
+        - "categoryId"
